--- a/src/app/layout/users/users.component.html
+++ b/src/app/layout/users/users.component.html
@@ -1,5 +1,5 @@
 <div *ngFor='let user of users' class="user-list">
-  <p>{{user.name}} ( {{user.username}} )</p>
+  <p class="name">{{user.name}}  ( {{user.username}} )</p>
   <p>{{user.email}}</p>
 
 </div>
