--- a/src/app/layout/users/users.component.css
+++ b/src/app/layout/users/users.component.css
@@ -1,8 +1,11 @@
 .user-list {
-  margin-bottom: 50px;
+  margin: 50px;
+  padding: 10px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .name {
   font-weight: 900;
   margin: 0;
 }
+
