--- a/src/app/layout/users/users.component.html
+++ b/src/app/layout/users/users.component.html
@@ -1,4 +1,6 @@
-<div *ngFor='let user of users' class="user-list">
-  <p class="name">{{user.name}}  ( {{user.username}} )</p>
-  <p>{{user.email}}</p>
+<div *ngFor='let user of users' class="card user-list">
+  <div class="card-body">
+    <h5 class="card-title name">{{user.name}}  ( {{user.username}} )</h5>
+    <a class="card-text" href="mailto:{{user.email}}">{{user.email}}</a>
+  </div>
 </div>
